trabalho.output
Terminais sem uso na gramática

   T_ASPAS_SIMPL
   T_BRANCO
   T_ERRO
   T_NEWLINE


Gramática

    0 $accept: raiz $end

    1 raiz: unid_traducao

    2 unid_traducao: unid_traducao decl_externa
    3              | decl_externa

    4 decl_externa: instr_decl
    5             | def_funcao

    6 def_funcao: decl_funcao cmd_composto

    7 lista_param: param
    8            | lista_param T_VIRG param

    9 param: T_TIPO T_ID

   10 instrucao: instr_decl
   11          | cmd_composto
   12          | cmd_selecao
   13          | cmd_repeticao
   14          | cmd_desvio
   15          | cmd_expr

   16 instr_decl: decl T_PEV

   17 decl: decl_var
   18     | decl_funcao

   19 decl_var: T_TIPO lista_inic

   20 lista_inic: lista_inic T_VIRG inic
   21           | inic

   22 inic: T_ID
   23     | T_ID T_ATRIB expr

   24 decl_funcao: T_TIPO T_ID T_APAREN lista_param T_FPAREN
   25            | T_VOID T_ID T_APAREN lista_param T_FPAREN
   26            | T_TIPO T_ID T_APAREN T_VOID T_FPAREN
   27            | T_VOID T_ID T_APAREN T_VOID T_FPAREN

   28 cmd_composto: T_ACOLCH lista_instr T_FCOLCH
   29             | T_ACOLCH T_FCOLCH

   30 lista_instr: lista_instr instrucao
   31            | instrucao

   32 cmd_selecao: T_IF T_APAREN expr T_FPAREN instrucao
   33            | T_IF T_APAREN expr T_FPAREN instrucao T_ELSE instrucao

   34 cmd_repeticao: cmd_for
   35              | cmd_while
   36              | cmd_do_while

   37 cmd_for: T_FOR T_APAREN expr T_PEV expr T_PEV expr T_FPAREN cmd_composto
   38        | T_FOR T_APAREN expr T_PEV expr T_PEV T_FPAREN cmd_composto
   39        | T_FOR T_APAREN expr T_PEV T_PEV expr T_FPAREN cmd_composto
   40        | T_FOR T_APAREN expr T_PEV T_PEV T_FPAREN cmd_composto
   41        | T_FOR T_APAREN T_PEV expr T_PEV expr T_FPAREN cmd_composto
   42        | T_FOR T_APAREN T_PEV expr T_PEV T_FPAREN cmd_composto
   43        | T_FOR T_APAREN T_PEV T_PEV expr T_FPAREN cmd_composto
   44        | T_FOR T_APAREN T_PEV T_PEV T_FPAREN cmd_composto

   45 cmd_while: T_WHILE T_APAREN expr T_FPAREN cmd_composto

   46 cmd_do_while: T_DO cmd_composto T_WHILE T_APAREN expr T_FPAREN T_PEV

   47 cmd_desvio: desvio T_PEV

   48 desvio: T_BREAK
   49       | T_CONTINUE
   50       | retorno

   51 retorno: T_RETURN
   52        | T_RETURN expr

   53 cmd_expr: expr T_PEV

   54 expr: expr_atrib

   55 expr_atrib: T_ID T_ATRIB expr_atrib
   56           | expr_ou

   57 expr_ou: expr_ou T_OU expr_e
   58        | expr_e

   59 expr_e: expr_e T_E expr_ou_excl
   60       | expr_ou_excl

   61 expr_ou_excl: expr_ou_excl T_OU_EXCL expr_igual
   62             | expr_igual

   63 expr_igual: expr_igual T_IGUAL expr_relac
   64           | expr_igual T_DIFER expr_relac
   65           | expr_relac

   66 expr_relac: expr_relac T_MENOR expr_soma
   67           | expr_relac T_MAIOR expr_soma
   68           | expr_relac T_MENOR_IGUAL expr_soma
   69           | expr_relac T_MAIOR_IGUAL expr_soma
   70           | expr_soma

   71 expr_soma: expr_soma T_MAIS expr_mult
   72          | expr_soma T_MENOS expr_mult
   73          | expr_mult

   74 expr_mult: expr_mult T_VEZES expr_simpl
   75          | expr_mult T_DIV expr_simpl
   76          | expr_mult T_RESTO expr_simpl
   77          | expr_unaria

   78 expr_unaria: oper_unario expr_simpl
   79            | expr_simpl

   80 expr_simpl: T_APAREN expr T_FPAREN
   81           | T_BOOL
   82           | T_CHAR
   83           | T_FLOAT
   84           | T_ID
   85           | T_INT
   86           | chamada_funcao

   87 chamada_funcao: T_ID T_APAREN lista_arg T_FPAREN
   88               | T_ID T_APAREN T_FPAREN

   89 lista_arg: lista_arg T_VIRG expr
   90          | expr

   91 oper_unario: T_MAIS
   92            | T_MENOS
   93            | oper_unario_log

   94 oper_unario_log: T_NAO
   95                | T_NAO oper_unario


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
T_ACOLCH (258) 28 29
T_APAREN (259) 24 25 26 27 32 33 37 38 39 40 41 42 43 44 45 46 80 87
    88
T_ATRIB (260) 23 55
T_ASPAS_SIMPL (261)
T_BRANCO (262)
T_BREAK (263) 48
T_BOOL (264) 81
T_CHAR (265) 82
T_FLOAT (266) 83
T_INT (267) 85
T_CONTINUE (268) 49
T_DIFER (269) 64
T_DIV (270) 75
T_DO (271) 46
T_E (272) 59
T_ELSE_FALSO (273)
T_ELSE (274) 33
T_ERRO (275)
T_FCOLCH (276) 28 29
T_FOR (277) 37 38 39 40 41 42 43 44
T_FPAREN (278) 24 25 26 27 32 33 37 38 39 40 41 42 43 44 45 46 80 87
    88
T_ID (279) 9 22 23 24 25 26 27 55 84 87 88
T_IF (280) 32 33
T_IGUAL (281) 63
T_MAIOR (282) 67
T_MAIOR_IGUAL (283) 69
T_MAIS (284) 71 91
T_MENOR (285) 66
T_MENOR_IGUAL (286) 68
T_MENOS (287) 72 92
T_NAO (288) 94 95
T_NEWLINE (289)
T_OU (290) 57
T_OU_EXCL (291) 61
T_PEV (292) 16 37 38 39 40 41 42 43 44 46 47 53
T_RESTO (293) 76
T_RETURN (294) 51 52
T_TIPO (295) 9 19 24 26
T_VEZES (296) 74
T_VIRG (297) 8 20 89
T_VOID (298) 25 26 27
T_WHILE (299) 45 46


Não terminais com as regras onde eles aparecem

$accept (45)
    à esquerda: 0
raiz (46)
    à esquerda: 1, à direita: 0
unid_traducao (47)
    à esquerda: 2 3, à direita: 1 2
decl_externa (48)
    à esquerda: 4 5, à direita: 2 3
def_funcao (49)
    à esquerda: 6, à direita: 5
lista_param (50)
    à esquerda: 7 8, à direita: 8 24 25
param (51)
    à esquerda: 9, à direita: 7 8
instrucao (52)
    à esquerda: 10 11 12 13 14 15, à direita: 30 31 32 33
instr_decl (53)
    à esquerda: 16, à direita: 4 10
decl (54)
    à esquerda: 17 18, à direita: 16
decl_var (55)
    à esquerda: 19, à direita: 17
lista_inic (56)
    à esquerda: 20 21, à direita: 19 20
inic (57)
    à esquerda: 22 23, à direita: 20 21
decl_funcao (58)
    à esquerda: 24 25 26 27, à direita: 6 18
cmd_composto (59)
    à esquerda: 28 29, à direita: 6 11 37 38 39 40 41 42 43 44 45
    46
lista_instr (60)
    à esquerda: 30 31, à direita: 28 30
cmd_selecao (61)
    à esquerda: 32 33, à direita: 12
cmd_repeticao (62)
    à esquerda: 34 35 36, à direita: 13
cmd_for (63)
    à esquerda: 37 38 39 40 41 42 43 44, à direita: 34
cmd_while (64)
    à esquerda: 45, à direita: 35
cmd_do_while (65)
    à esquerda: 46, à direita: 36
cmd_desvio (66)
    à esquerda: 47, à direita: 14
desvio (67)
    à esquerda: 48 49 50, à direita: 47
retorno (68)
    à esquerda: 51 52, à direita: 50
cmd_expr (69)
    à esquerda: 53, à direita: 15
expr (70)
    à esquerda: 54, à direita: 23 32 33 37 38 39 40 41 42 43 45 46
    52 53 80 89 90
expr_atrib (71)
    à esquerda: 55 56, à direita: 54 55
expr_ou (72)
    à esquerda: 57 58, à direita: 56 57
expr_e (73)
    à esquerda: 59 60, à direita: 57 58 59
expr_ou_excl (74)
    à esquerda: 61 62, à direita: 59 60 61
expr_igual (75)
    à esquerda: 63 64 65, à direita: 61 62 63 64
expr_relac (76)
    à esquerda: 66 67 68 69 70, à direita: 63 64 65 66 67 68 69
expr_soma (77)
    à esquerda: 71 72 73, à direita: 66 67 68 69 70 71 72
expr_mult (78)
    à esquerda: 74 75 76 77, à direita: 71 72 73 74 75 76
expr_unaria (79)
    à esquerda: 78 79, à direita: 77
expr_simpl (80)
    à esquerda: 80 81 82 83 84 85 86, à direita: 74 75 76 78 79
chamada_funcao (81)
    à esquerda: 87 88, à direita: 86
lista_arg (82)
    à esquerda: 89 90, à direita: 87 89
oper_unario (83)
    à esquerda: 91 92 93, à direita: 78 95
oper_unario_log (84)
    à esquerda: 94 95, à direita: 93


Estado 0

    0 $accept: . raiz $end

    T_TIPO  deslocar, e ir ao estado 1
    T_VOID  deslocar, e ir ao estado 2

    raiz           ir ao estado 3
    unid_traducao  ir ao estado 4
    decl_externa   ir ao estado 5
    def_funcao     ir ao estado 6
    instr_decl     ir ao estado 7
    decl           ir ao estado 8
    decl_var       ir ao estado 9
    decl_funcao    ir ao estado 10


Estado 1

   19 decl_var: T_TIPO . lista_inic
   24 decl_funcao: T_TIPO . T_ID T_APAREN lista_param T_FPAREN
   26            | T_TIPO . T_ID T_APAREN T_VOID T_FPAREN

    T_ID  deslocar, e ir ao estado 11

    lista_inic  ir ao estado 12
    inic        ir ao estado 13


Estado 2

   25 decl_funcao: T_VOID . T_ID T_APAREN lista_param T_FPAREN
   27            | T_VOID . T_ID T_APAREN T_VOID T_FPAREN

    T_ID  deslocar, e ir ao estado 14


Estado 3

    0 $accept: raiz . $end

    $end  deslocar, e ir ao estado 15


Estado 4

    1 raiz: unid_traducao .
    2 unid_traducao: unid_traducao . decl_externa

    T_TIPO  deslocar, e ir ao estado 1
    T_VOID  deslocar, e ir ao estado 2

    $padrão  reduzir usando a regra 1 (raiz)

    decl_externa  ir ao estado 16
    def_funcao    ir ao estado 6
    instr_decl    ir ao estado 7
    decl          ir ao estado 8
    decl_var      ir ao estado 9
    decl_funcao   ir ao estado 10


Estado 5

    3 unid_traducao: decl_externa .

    $padrão  reduzir usando a regra 3 (unid_traducao)


Estado 6

    5 decl_externa: def_funcao .

    $padrão  reduzir usando a regra 5 (decl_externa)


Estado 7

    4 decl_externa: instr_decl .

    $padrão  reduzir usando a regra 4 (decl_externa)


Estado 8

   16 instr_decl: decl . T_PEV

    T_PEV  deslocar, e ir ao estado 17


Estado 9

   17 decl: decl_var .

    $padrão  reduzir usando a regra 17 (decl)


Estado 10

    6 def_funcao: decl_funcao . cmd_composto
   18 decl: decl_funcao .

    T_ACOLCH  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 18 (decl)

    cmd_composto  ir ao estado 19


Estado 11

   22 inic: T_ID .
   23     | T_ID . T_ATRIB expr
   24 decl_funcao: T_TIPO T_ID . T_APAREN lista_param T_FPAREN
   26            | T_TIPO T_ID . T_APAREN T_VOID T_FPAREN

    T_APAREN  deslocar, e ir ao estado 20
    T_ATRIB   deslocar, e ir ao estado 21

    $padrão  reduzir usando a regra 22 (inic)


Estado 12

   19 decl_var: T_TIPO lista_inic .
   20 lista_inic: lista_inic . T_VIRG inic

    T_VIRG  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 19 (decl_var)


Estado 13

   21 lista_inic: inic .

    $padrão  reduzir usando a regra 21 (lista_inic)


Estado 14

   25 decl_funcao: T_VOID T_ID . T_APAREN lista_param T_FPAREN
   27            | T_VOID T_ID . T_APAREN T_VOID T_FPAREN

    T_APAREN  deslocar, e ir ao estado 23


Estado 15

    0 $accept: raiz $end .

    $padrão  aceitar


Estado 16

    2 unid_traducao: unid_traducao decl_externa .

    $padrão  reduzir usando a regra 2 (unid_traducao)


Estado 17

   16 instr_decl: decl T_PEV .

    $padrão  reduzir usando a regra 16 (instr_decl)


Estado 18

   28 cmd_composto: T_ACOLCH . lista_instr T_FCOLCH
   29             | T_ACOLCH . T_FCOLCH

    T_ACOLCH    deslocar, e ir ao estado 18
    T_APAREN    deslocar, e ir ao estado 24
    T_BREAK     deslocar, e ir ao estado 25
    T_BOOL      deslocar, e ir ao estado 26
    T_CHAR      deslocar, e ir ao estado 27
    T_FLOAT     deslocar, e ir ao estado 28
    T_INT       deslocar, e ir ao estado 29
    T_CONTINUE  deslocar, e ir ao estado 30
    T_DO        deslocar, e ir ao estado 31
    T_FCOLCH    deslocar, e ir ao estado 32
    T_FOR       deslocar, e ir ao estado 33
    T_ID        deslocar, e ir ao estado 34
    T_IF        deslocar, e ir ao estado 35
    T_MAIS      deslocar, e ir ao estado 36
    T_MENOS     deslocar, e ir ao estado 37
    T_NAO       deslocar, e ir ao estado 38
    T_RETURN    deslocar, e ir ao estado 39
    T_TIPO      deslocar, e ir ao estado 1
    T_VOID      deslocar, e ir ao estado 2
    T_WHILE     deslocar, e ir ao estado 40

    instrucao        ir ao estado 41
    instr_decl       ir ao estado 42
    decl             ir ao estado 8
    decl_var         ir ao estado 9
    decl_funcao      ir ao estado 43
    cmd_composto     ir ao estado 44
    lista_instr      ir ao estado 45
    cmd_selecao      ir ao estado 46
    cmd_repeticao    ir ao estado 47
    cmd_for          ir ao estado 48
    cmd_while        ir ao estado 49
    cmd_do_while     ir ao estado 50
    cmd_desvio       ir ao estado 51
    desvio           ir ao estado 52
    retorno          ir ao estado 53
    cmd_expr         ir ao estado 54
    expr             ir ao estado 55
    expr_atrib       ir ao estado 56
    expr_ou          ir ao estado 57
    expr_e           ir ao estado 58
    expr_ou_excl     ir ao estado 59
    expr_igual       ir ao estado 60
    expr_relac       ir ao estado 61
    expr_soma        ir ao estado 62
    expr_mult        ir ao estado 63
    expr_unaria      ir ao estado 64
    expr_simpl       ir ao estado 65
    chamada_funcao   ir ao estado 66
    oper_unario      ir ao estado 67
    oper_unario_log  ir ao estado 68


Estado 19

    6 def_funcao: decl_funcao cmd_composto .

    $padrão  reduzir usando a regra 6 (def_funcao)


Estado 20

   24 decl_funcao: T_TIPO T_ID T_APAREN . lista_param T_FPAREN
   26            | T_TIPO T_ID T_APAREN . T_VOID T_FPAREN

    T_TIPO  deslocar, e ir ao estado 69
    T_VOID  deslocar, e ir ao estado 70

    lista_param  ir ao estado 71
    param        ir ao estado 72


Estado 21

   23 inic: T_ID T_ATRIB . expr

    T_APAREN  deslocar, e ir ao estado 24
    T_BOOL    deslocar, e ir ao estado 26
    T_CHAR    deslocar, e ir ao estado 27
    T_FLOAT   deslocar, e ir ao estado 28
    T_INT     deslocar, e ir ao estado 29
    T_ID      deslocar, e ir ao estado 34
    T_MAIS    deslocar, e ir ao estado 36
    T_MENOS   deslocar, e ir ao estado 37
    T_NAO     deslocar, e ir ao estado 38

    expr             ir ao estado 73
    expr_atrib       ir ao estado 56
    expr_ou          ir ao estado 57
    expr_e           ir ao estado 58
    expr_ou_excl     ir ao estado 59
    expr_igual       ir ao estado 60
    expr_relac       ir ao estado 61
    expr_soma        ir ao estado 62
    expr_mult        ir ao estado 63
    expr_unaria      ir ao estado 64
    expr_simpl       ir ao estado 65
    chamada_funcao   ir ao estado 66
    oper_unario      ir ao estado 67
    oper_unario_log  ir ao estado 68


Estado 22

   20 lista_inic: lista_inic T_VIRG . inic

    T_ID  deslocar, e ir ao estado 74

    inic  ir ao estado 75


Estado 23

   25 decl_funcao: T_VOID T_ID T_APAREN . lista_param T_FPAREN
   27            | T_VOID T_ID T_APAREN . T_VOID T_FPAREN

    T_TIPO  deslocar, e ir ao estado 69
    T_VOID  deslocar, e ir ao estado 76

    lista_param  ir ao estado 77
    param        ir ao estado 72


Estado 24

   80 expr_simpl: T_APAREN . expr T_FPAREN

    T_APAREN  deslocar, e ir ao estado 24
    T_BOOL    deslocar, e ir ao estado 26
    T_CHAR    deslocar, e ir ao estado 27
    T_FLOAT   deslocar, e ir ao estado 28
    T_INT     deslocar, e ir ao estado 29
    T_ID      deslocar, e ir ao estado 34
    T_MAIS    deslocar, e ir ao estado 36
    T_MENOS   deslocar, e ir ao estado 37
    T_NAO     deslocar, e ir ao estado 38

    expr             ir ao estado 78
    expr_atrib       ir ao estado 56
    expr_ou          ir ao estado 57
    expr_e           ir ao estado 58
    expr_ou_excl     ir ao estado 59
    expr_igual       ir ao estado 60
    expr_relac       ir ao estado 61
    expr_soma        ir ao estado 62
    expr_mult        ir ao estado 63
    expr_unaria      ir ao estado 64
    expr_simpl       ir ao estado 65
    chamada_funcao   ir ao estado 66
    oper_unario      ir ao estado 67
    oper_unario_log  ir ao estado 68


Estado 25

   48 desvio: T_BREAK .

    $padrão  reduzir usando a regra 48 (desvio)


Estado 26

   81 expr_simpl: T_BOOL .

    $padrão  reduzir usando a regra 81 (expr_simpl)


Estado 27

   82 expr_simpl: T_CHAR .

    $padrão  reduzir usando a regra 82 (expr_simpl)


Estado 28

   83 expr_simpl: T_FLOAT .

    $padrão  reduzir usando a regra 83 (expr_simpl)


Estado 29

   85 expr_simpl: T_INT .

    $padrão  reduzir usando a regra 85 (expr_simpl)


Estado 30

   49 desvio: T_CONTINUE .

    $padrão  reduzir usando a regra 49 (desvio)


Estado 31

   46 cmd_do_while: T_DO . cmd_composto T_WHILE T_APAREN expr T_FPAREN T_PEV

    T_ACOLCH  deslocar, e ir ao estado 18

    cmd_composto  ir ao estado 79


Estado 32

   29 cmd_composto: T_ACOLCH T_FCOLCH .

    $padrão  reduzir usando a regra 29 (cmd_composto)


Estado 33

   37 cmd_for: T_FOR . T_APAREN expr T_PEV expr T_PEV expr T_FPAREN cmd_composto
   38        | T_FOR . T_APAREN expr T_PEV expr T_PEV T_FPAREN cmd_composto
   39        | T_FOR . T_APAREN expr T_PEV T_PEV expr T_FPAREN cmd_composto
   40        | T_FOR . T_APAREN expr T_PEV T_PEV T_FPAREN cmd_composto
   41        | T_FOR . T_APAREN T_PEV expr T_PEV expr T_FPAREN cmd_composto
   42        | T_FOR . T_APAREN T_PEV expr T_PEV T_FPAREN cmd_composto
   43        | T_FOR . T_APAREN T_PEV T_PEV expr T_FPAREN cmd_composto
   44        | T_FOR . T_APAREN T_PEV T_PEV T_FPAREN cmd_composto

    T_APAREN  deslocar, e ir ao estado 80


Estado 34

   55 expr_atrib: T_ID . T_ATRIB expr_atrib
   84 expr_simpl: T_ID .
   87 chamada_funcao: T_ID . T_APAREN lista_arg T_FPAREN
   88               | T_ID . T_APAREN T_FPAREN

    T_APAREN  deslocar, e ir ao estado 81
    T_ATRIB   deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 84 (expr_simpl)


Estado 35

   32 cmd_selecao: T_IF . T_APAREN expr T_FPAREN instrucao
   33            | T_IF . T_APAREN expr T_FPAREN instrucao T_ELSE instrucao

    T_APAREN  deslocar, e ir ao estado 83


Estado 36

   91 oper_unario: T_MAIS .

    $padrão  reduzir usando a regra 91 (oper_unario)


Estado 37

   92 oper_unario: T_MENOS .

    $padrão  reduzir usando a regra 92 (oper_unario)


Estado 38

   94 oper_unario_log: T_NAO .
   95                | T_NAO . oper_unario

    T_MAIS   deslocar, e ir ao estado 36
    T_MENOS  deslocar, e ir ao estado 37
    T_NAO    deslocar, e ir ao estado 38

    $padrão  reduzir usando a regra 94 (oper_unario_log)

    oper_unario      ir ao estado 84
    oper_unario_log  ir ao estado 68


Estado 39

   51 retorno: T_RETURN .
   52        | T_RETURN . expr

    T_APAREN  deslocar, e ir ao estado 24
    T_BOOL    deslocar, e ir ao estado 26
    T_CHAR    deslocar, e ir ao estado 27
    T_FLOAT   deslocar, e ir ao estado 28
    T_INT     deslocar, e ir ao estado 29
    T_ID      deslocar, e ir ao estado 34
    T_MAIS    deslocar, e ir ao estado 36
    T_MENOS   deslocar, e ir ao estado 37
    T_NAO     deslocar, e ir ao estado 38

    $padrão  reduzir usando a regra 51 (retorno)

    expr             ir ao estado 85
    expr_atrib       ir ao estado 56
    expr_ou          ir ao estado 57
    expr_e           ir ao estado 58
    expr_ou_excl     ir ao estado 59
    expr_igual       ir ao estado 60
    expr_relac       ir ao estado 61
    expr_soma        ir ao estado 62
    expr_mult        ir ao estado 63
    expr_unaria      ir ao estado 64
    expr_simpl       ir ao estado 65
    chamada_funcao   ir ao estado 66
    oper_unario      ir ao estado 67
    oper_unario_log  ir ao estado 68


Estado 40

   45 cmd_while: T_WHILE . T_APAREN expr T_FPAREN cmd_composto

    T_APAREN  deslocar, e ir ao estado 86


Estado 41

   31 lista_instr: instrucao .

    $padrão  reduzir usando a regra 31 (lista_instr)


Estado 42

   10 instrucao: instr_decl .

    $padrão  reduzir usando a regra 10 (instrucao)


Estado 43

   18 decl: decl_funcao .

    $padrão  reduzir usando a regra 18 (decl)


Estado 44

   11 instrucao: cmd_composto .

    $padrão  reduzir usando a regra 11 (instrucao)


Estado 45

   28 cmd_composto: T_ACOLCH lista_instr . T_FCOLCH
   30 lista_instr: lista_instr . instrucao
